--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   },
   "devDependencies": {
     "@types/react": "17.0.20",
+    "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.14",
     "typescript": "4.4.2"
   }
 }
